--- a/00_zero/04_x03.ipynb
+++ b/00_zero/04_x03.ipynb
@@ -200,6 +200,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_con_e = []\n",
+    "lista_indices = []\n",
+    "\n",
+    "for idx, palabra in enumerate(mylist):\n",
+    "    if contiene_letra(palabra, \"e\"):\n",
+    "        lista_con_e.append(palabra)\n",
+    "\n",
+    "    if contiene_letra(palabra, \"a\"):\n",
+    "        print(palabra)\n",
+    "    else:\n",
+    "        lista_indices.append(idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
