--- a/00_zero/06_x01.ipynb
+++ b/00_zero/06_x01.ipynb
@@ -126,6 +126,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto = (\n",
+    "    \" \".join(mylist)\n",
+    "    .lower()\n",
+    "    .strip()\n",
+    "    .replace(\"[\", \"\")\n",
+    "    .replace(\"]\", \"\")\n",
+    "    .replace(\"(\", \"\")\n",
+    "    .replace(\")\", \"\")\n",
+    "    .replace(\"python\", \"golang\")\n",
+    "    .replace(\"abc\", \"apl\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -223,6 +249,64 @@
     "    # word = word.replace(\"(\", \"\").replace(\")\", \"\").replace(\"[\", \"\").replace(\"]\", \"\")\n",
     "    \n",
     "    print(f\"La palabra es {word}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Formas alternativas de reemplazar**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = str.maketrans(\"()[]\", \"    \")\n",
+    "\"asdf (asd) as [s]\".translate(table).replace(\"  \", \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "pat = re.compile(r\"[\\(\\)\\[\\]]\")\n",
+    "\n",
+    "pat.sub(\"\", \"asdf (asd) as [s]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reemplazar(texto: str, grupos: tuple, reemplazo: str):\n",
+    "\n",
+    "    nuevo_texto = texto\n",
+    "\n",
+    "    for c in grupos:\n",
+    "        nuevo_texto = nuevo_texto.replace(c, reemplazo)\n",
+    "\n",
+    "    return nuevo_texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grupos_reemplazo = (\"do\", \"lla\", \"ri\", \"m\")\n",
+    "\n",
+    "\n",
+    "reemplazar(\"hodo me llado (ricardo)\", grupos_reemplazo, \"!\")"
    ]
   }
  ],
