--- a/00_zero/06_strings.ipynb
+++ b/00_zero/06_strings.ipynb
@@ -14,8 +14,8 @@
     "* .split()\n",
     "* .replace()\n",
     "* .lower()\n",
-    "* .strip\n",
-    "* \"\".join\n",
+    "* .strip()\n",
+    "* \"\".join(iterable)\n",
     "* f-strings\n",
     "    * `f\"texto {variable} text {mifuncion(parametro1, parametro2)}\"`"
    ]
