--- a/00_zero/07_archivos.ipynb
+++ b/00_zero/07_archivos.ipynb
@@ -327,14 +327,15 @@
    "source": [
     "### Ejercicio\n",
     "\n",
-    "1. Copiar todo el texto y crear un string de Python. Se puede usar triple comilas (\"\"\") para copiar un string literal de varias lineas.\n",
-    "2. Separar por grupos a lists.\n",
+    "**Usando la cadena de texto ya escrita:**\n",
+    "\n",
+    "1. Separar por grupos a lists.\n",
     "    * Donde ponga grupo 1 -> todos van a una misma lista\n",
     "    * Done ponga grupo 2 -> a otra lista\n",
     "    * Done ponga grupo 3 -> a otra lista\n",
     "    * Cuidado que tienen diferente formato.\n",
     "    \n",
-    "3. Escribir cada grupo a un archivo.\n",
+    "2. Escribir cada grupo a un archivo.\n",
     "    * La lista del grupo 1 -> grupo1.txt (cada uno en una nueva línea).\n",
     "    * La lista del grupo 2 -> grupo2.txt (cada uno en una nueva línea).\n",
     "    * La lista del grupo 3 -> grupo3.txt (cada uno en una nueva línea).\n",
