--- a/00_zero/07_archivos.ipynb
+++ b/00_zero/07_archivos.ipynb
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio\n",
+    "## Ejercicio\n",
     "\n",
     "**Usando la cadena de texto ya escrita:**\n",
     "\n",
@@ -396,6 +396,97 @@
    "source": [
     "### CODE"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PISTAS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Generar las listas**\n",
+    "\n",
+    "```python\n",
+    "grupo_1 = []\n",
+    "grupo_2 = []\n",
+    "grupo_3 = []\n",
+    "\n",
+    "for l in ss.split(\"\\n\"):\n",
+    "    grupo = int(...)\n",
+    "\n",
+    "    # opcion 1\n",
+    "    if grupo == X:\n",
+    "        grupo_X.append(...)\n",
+    "\n",
+    "    # opcion 2\n",
+    "    if \"....\" in l:\n",
+    "        grupo_X.append(...)\n",
+    "````\n",
+    "\n",
+    "* **Escribir archivos**\n",
+    "\n",
+    "```python\n",
+    "# opcion 1\n",
+    "with open(\"grupo1.txt\", \"w\") as f:\n",
+    "    f.writelines(...)\n",
+    "\n",
+    "# opcion 2\n",
+    "with open(\"grupo1.txt\", \"w\") as f:\n",
+    "    for p in grupo_1:\n",
+    "        f.write(... + \"\\n\")\n",
+    "```\n",
+    "\n",
+    "\n",
+    "* **Para usar el `in` con un texto, el elemento que buscamos debe ser también texto**\n",
+    "\n",
+    "```python\n",
+    "2 in \"hola 1 2 hola\" ## <<== da error\n",
+    "\n",
+    "\"2\" in \"hola 1 2 hola\" ## <<== funciona\n",
+    "````\n",
+    "\n",
+    "\n",
+    "* **Una cadena de texto se puede indexar**\n",
+    "\n",
+    "```python\n",
+    "\"hola\"[1] == \"o\" # True\n",
+    "````\n",
+    "\n",
+    "\n",
+    "* **el método `.split()` acepta caracteres, no tiene por qué ser un espacio en blanco**\n",
+    "\n",
+    "```python\n",
+    "\"hola-adios\".split(\"-\") == [\"hola\", \"adios\"] # True\n",
+    "```\n",
+    "\n",
+    "* **Un string vacio es como si fuera un `None` cuando lo utilizamos en un `if`**\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "txt = \"\"\n",
+    "\n",
+    "if not txt:\n",
+    "    print(1)\n",
+    "\n",
+    "# O también\n",
+    "\n",
+    "if txt != \"\":\n",
+    "    print(\"NO está vacio\")\n",
+    "else:\n",
+    "    print(\"string vacio\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
