new methods and file dls

--- a/00_zero/07_x01.ipynb
+++ b/00_zero/07_x01.ipynb
@@ -118,6 +118,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for e in ss.split(\"\\n\"):\n",
+    "    if e == \"\":\n",
+    "        continue\n",
+    "    \n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "personaje = ss.split(\"\\n\")[1:-1][0]"
    ]
   },
@@ -213,6 +226,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "grupo_1 = []\n",
+    "grupo_2 = []\n",
+    "grupo_3 = []\n",
+    "\n",
+    "\n",
+    "# opcion 1\n",
+    "lista_limpia = ss.split(\"\\n\")[1:-1]\n",
+    "\n",
+    "# mejor todavía\n",
+    "lista_limpia = ss.strip().split(\"\\n\")\n",
+    "\n",
+    "for pers in lista_limpia:\n",
+    "    \n",
+    "    # NOMBRE\n",
+    "    \n",
+    "    # opcion 1\n",
+    "    nombre = pers.split(\"<\")[0]\n",
+    "    \n",
+    "    # opcion 2\n",
+    "    nombre = pers[:-9]\n",
+    "\n",
+    "    # GRUPOS\n",
+    "    \n",
+    "    # opcion 1\n",
+    "    if \"1\" in pers:\n",
+    "        grupo_1.append(nombre)\n",
+    "    if \"2\" in pers:\n",
+    "        grupo_2.append(nombre)\n",
+    "    if \"3\" in pers:\n",
+    "        grupo_3.append(nombre)\n",
+    "\n",
+    "    \n",
+    "    # opcion 2\n",
+    "    grupo = int(pers[-2])\n",
+    "    \n",
+    "    if grupo == 1:\n",
+    "        grupo_1.append(nombre)\n",
+    "    if grupo == 2:\n",
+    "        grupo_2.append(nombre)\n",
+    "    if grupo == 3:\n",
+    "        grupo_3.append(nombre)\n",
+    "\n",
+    "    if pers.startswith(\"n\"):\n",
+    "        print(pers)\n",
+    "\n",
+    "\n",
+    "grupo_1, grupo_2, grupo_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(\"grupo_1.txt\", \"w\") as f:\n",
     "    for person in grupo1:\n",
     "        f.write(f\"{person}\\n\")"
@@ -256,27 +324,6 @@
    "outputs": [],
    "source": [
     "archivos_con_nombres = glob(\"grupo_*.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-25ee9c661711>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"gamora\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\"gamora\" in data"
    ]
   },
   {
