--- a/01_comprehensions_pep8/comprehensions.ipynb
+++ b/01_comprehensions_pep8/comprehensions.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "if \"cartas.json\" not in os.listdir():\n",
+    "    print(\"downloading...\")\n",
+    "    with open(\"cartas.json\", \"w\") as f:\n",
+    "        f.write(\n",
+    "            requests.get(\n",
+    "                \"https://raw.githubusercontent.com/polyrand/teach/master/01_comprehensions_pep8/cartas.json\"\n",
+    "            ).text\n",
+    "        )\n",
+    "else:\n",
+    "    print(\"file exists\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
