--- a/02_json-yaml/00_json_yaml.ipynb
+++ b/02_json-yaml/00_json_yaml.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "items.yaml already exists\n",
+      "data.yaml already exists\n",
+      "docker-compose.yml already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fn in [\n",
+    "    \"items.yaml\",\n",
+    "    \"data.yaml\",\n",
+    "    \"docker-compose.yml\",\n",
+    "]:\n",
+    "    if fn not in os.listdir():\n",
+    "        print(f\"downloading {fn}...\")\n",
+    "        with open(fn, \"w\") as f:\n",
+    "            f.write(\n",
+    "                requests.get(\n",
+    "                    f\"fttps://raw.githubusercontent.com/polyrand/teach/master/02_json-yaml/{fn}\"\n",
+    "                ).text\n",
+    "            )\n",
+    "            \n",
+    "    else:\n",
+    "        print(f\"{fn} already exists\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +152,7 @@
        "'macbook'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +342,7 @@
        "  {'modelo': 'imac', 'versionpython': 3.8}]}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,17 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66.1 µs ± 3.04 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"jsondata.json\", \"r\") as archivo:\n",
     "    datos = archivo.read()\n",
@@ -347,17 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "78.1 µs ± 6.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"jsondata.json\", \"r\") as archivo:\n",
     "\n",
@@ -366,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +409,7 @@
        "  {'modelo': 'imac', 'versionpython': 3.8}]}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +524,7 @@
        " 'bolis': 6}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,6 +906,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejemplo de un archivo `.gif` incluído dentro del YAML."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -901,7 +935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dejo también el ejemplo que he usado en clase. No funcionará ya que no tenéis el archivo en el ordenador pero com ejemplo puede ir bien."
+    "Dejo también el ejemplo que he usado en clase. No funcionará ya que no tenéis el archivo en el ordenador pero como ejemplo puede ir bien."
    ]
   },
   {
