--- a/03_requests/00_requests.ipynb
+++ b/03_requests/00_requests.ipynb
@@ -162,6 +162,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if res.status_code != 200:\n",
+    "    print(f\"Status Code no correcto: {res.status_code}\")\n",
+    "    raise requests.HTTPError"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
