new lib contents

--- a/02_json-yaml/00_json_yaml.ipynb
+++ b/02_json-yaml/00_json_yaml.ipynb
@@ -952,6 +952,217 @@
     "    print(\"el yaml esta mal configurado\")\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vuelta al tema 00/09_librerias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con el comando de jupyter `%%writefile <nombre_archivo>` escribimos los contenido de esa celda en `<nombre_archivo>` (¡se sobreescribe!)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "id": "8DMtDR6cfzzZ"
+   },
+   "outputs": [],
+   "source": [
+    "usuarios = {\"marta\": 123, \"laura\": 345, \"andrea\": 234}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "id": "e3-wr980f5N2"
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"usuarios.json\", \"w\") as f:\n",
+    "    f.write(json.dumps(usuarios))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "g2vrXixderbt",
+    "outputId": "7c72339a-39dc-43b3-c2ea-bb819d0c14c5"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing mis_funciones.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile mis_funciones.py\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "def leer_json(nombre):\n",
+    "    with open(nombre) as f:\n",
+    "        contenidos_archivo = f.read()\n",
+    "        obj = json.loads(contenidos_archivo)\n",
+    "\n",
+    "    return obj\n",
+    "\n",
+    "\n",
+    "def guardar_json(obj, nombre):\n",
+    "    with open(nombre, \"w\") as f:\n",
+    "        cadena_json = json.dumps(obj)\n",
+    "        f.write(cadena_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "id": "yDsx4Sv8gLsE"
+   },
+   "outputs": [],
+   "source": [
+    "from mis_funciones import leer_json, guardar_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "id": "wFn2xCTYgX3r"
+   },
+   "outputs": [],
+   "source": [
+    "usuarios = leer_json(\"users.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "id": "cidg8X4pgYcj"
+   },
+   "outputs": [],
+   "source": [
+    "usuarios[\"andrea\"] = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "pGPpEY19gd3X",
+    "outputId": "5b055c55-944b-49e3-d128-caec96f0400c"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'andrea': 1000, 'laura': 345, 'marta': 123}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {
+      "tags": []
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usuarios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "id": "AMx_1C6vfo75"
+   },
+   "outputs": [],
+   "source": [
+    "guardar_json(usuarios, \"users_updated.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "9KJpOIkochLu",
+    "outputId": "3049db0c-98e9-44bb-b696-2ce2ef32024d"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting program.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile program.py\n",
+    "import mis_funciones\n",
+    "\n",
+    "usuarios = mis_funciones.leer_json(\"users.json\")\n",
+    "\n",
+    "print(\"Hola, introduce un nuevo valor\")\n",
+    "\n",
+    "valor = input(\"Valor: \")\n",
+    "\n",
+    "usuarios[\"andrea\"] = valor\n",
+    "\n",
+    "mis_funciones.guardar_json(usuarios, \"users_updated.json\")\n",
+    "\n",
+    "print(\"JSON actualizado\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "1RZZHbOCcj7A",
+    "outputId": "1e697d22-ede0-4d2c-d3d3-a609c6aabcc7"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, introduce un nuevo valor\n",
+      "Valor: 30000\n",
+      "JSON actualizado\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 program.py"
+   ]
   }
  ],
  "metadata": {
