--- a/02_json-yaml/00_json_yaml.ipynb
+++ b/02_json-yaml/00_json_yaml.ipynb
@@ -964,12 +964,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con el comando de jupyter `%%writefile <nombre_archivo>` escribimos los contenido de esa celda en `<nombre_archivo>` (¡se sobreescribe!)."
+    "Vamos a crear un módulo de Python con algunas funciones. Así podemos importar ese módulo desde varios sitios sin tener que copiar y pegar las funciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOTA: Con el comando de jupyter `%%writefile <nombre_archivo>` escribimos los contenido de esa celda en `<nombre_archivo>` (¡se sobreescribe!)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crear y guardo un archivo json."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "id": "8DMtDR6cfzzZ"
    },
@@ -980,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "id": "e3-wr980f5N2"
    },
@@ -988,13 +1002,20 @@
    "source": [
     "import json\n",
     "\n",
-    "with open(\"usuarios.json\", \"w\") as f:\n",
+    "with open(\"users.json\", \"w\") as f:\n",
     "    f.write(json.dumps(usuarios))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora voy a crear un módulo llamado `mis_funciones.py`. Dentro habrá 2 funciones, una para leer archivos json y otro para guardarlos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1007,7 +1028,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing mis_funciones.py\n"
+      "Overwriting mis_funciones.py\n"
      ]
     }
    ],
@@ -1032,8 +1053,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora puedo importar este módulo y sus funciones desde otros sitios:\n",
+    "\n",
+    "NOTA: se escribe `import mis_funciones`, **no** `import mis_funciones.py`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "id": "yDsx4Sv8gLsE"
    },
@@ -1044,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "id": "wFn2xCTYgX3r"
    },
@@ -1055,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "id": "cidg8X4pgYcj"
    },
@@ -1066,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1078,13 +1108,11 @@
     {
      "data": {
       "text/plain": [
-       "{'andrea': 1000, 'laura': 345, 'marta': 123}"
+       "{'marta': 123, 'laura': 345, 'andrea': 1000}"
       ]
      },
-     "execution_count": 22,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 12,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1094,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "id": "AMx_1C6vfo75"
    },
@@ -1104,8 +1132,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mi módulo lo puedo importar también desde otro script de Python.\n",
+    "\n",
+    "Aqui estoy creando un script llamado `program.py`. En el script importo el módulo que he creado antes y lo utilizo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1118,7 +1155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting program.py\n"
+      "Writing program.py\n"
      ]
     }
    ],
@@ -1140,8 +1177,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Recuerda*: El símbolo `!` significa que vas a ejecutar un comando como si lo hicieras desde la terminal.\n",
+    "\n",
+    "**Importante**: este script utiliza la función `input()`. En un notebook de Jupyter no funcinará correctamente. En un notebook de Google Colab, si."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1149,17 +1195,7 @@
     "id": "1RZZHbOCcj7A",
     "outputId": "1e697d22-ede0-4d2c-d3d3-a609c6aabcc7"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola, introduce un nuevo valor\n",
-      "Valor: 30000\n",
-      "JSON actualizado\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python3 program.py"
    ]
